# hannibal

./: .gitignore  ChangeLog.md  README.md  cabal.sandbox.config  hannibal.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Main.hs
src/Hannibal/: Config.hs  Index.hs  Instance.hs  Pieces.hs  UUID.hs
src/Hannibal/Filesystem/: FileCache.hs  FileDesc.hs  FileIndex.hs  Filesystem.hs  Index.hs  Pieces.hs
src/Hannibal/Network/: Control.hs  Discovery.hs  FileTransfer.hs  Message.hs  Sockets.hs
