name:                hannibal

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Hannibal is a P2P client to share files on a local network
                    (LAN)
-- description:

homepage:            https://github.com/RaphaelJ/hannibal

license:             GPL-3
license-file:        LICENSE
-- copyright:

author:              Raphael Javaux
maintainer:          raphaeljavaux@gmail.com

category:            Network

build-type:          Simple

extra-source-files:  ChangeLog.md

cabal-version:       >=1.10

executable hannibal
  main-is:              Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:        base                >= 4.9 && < 4.10
                      , binary              >= 0.8.3.0 && < 0.9
                      , bson                >= 0.3.2.3 && < 0.4
                      , bytestring          >= 0.10.0.1 && < 0.11
                      , classy-prelude      >= 1.0.0.1 && < 1.1
                      , conduit             >= 1.3.0.2 && < 1.4
                      , conduit-extra       >= 1.3.0 && < 1.4
                      , binary-conduit      >= 1.3 && < 1.4
                      , containers          >= 0.5.7.1 && < 0.6
                      , directory-tree      >= 0.12.1 && < 0.13
                      , lz4                 >= 0.2.3.1 && < 0.3
                      , mtl                 >= 2.2.1 && < 2.3
                      , network             >= 2.6.3.1 && < 2.7
                      , random              >= 1.1 && < 1.2
                      , SHA                 >= 1.6.4.2 && < 1.7
                      , text                >= 1.2.2.1 && < 1.3
                      , uuid                >= 1.3.13 && < 1.4
                      , vector              >= 0.11 && < 0.12

  hs-source-dirs:       src

  ghc-options:          -Wall -Werror -rtsopts -threaded

  default-language:     Haskell2010

  default-extensions:   BangPatterns
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
